--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Leodomi",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "colors": "^1.4.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.15.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
