--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "author": "Leodomi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.1"
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.15.1",
+    "slug": "^11.0.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.23",
+    "@types/slug": "^5.0.9",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
